--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -14,6 +14,10 @@ html,body{
   width: 90%;
   margin: 0 auto;
 }
+
+.item{
+  padding: 0 10px;
+}
 /* .cc1{
   height: 2vh;
   background-color: brown
